service/community/chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: community
spec:
  type: NodePort
  ports:
    - name: community
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    application: community
