service/community/chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: community
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: { { .Values.fqdn } }
      http:
        paths:
          - path: /community
            pathType: Prefix
            backend:
              service:
                name: community
                port:
                  number: 8080
